# cd-backend-rust

./: .gitattributes  Cargo.toml
crates/cd-app/: Cargo.toml
crates/cd-app/src/: main.rs
crates/cd-common/: Cargo.toml
crates/cd-core/: Cargo.toml
crates/cd-core/src/: geo.rs  grid.rs  guid.rs  lib.rs
crates/cd-ecs/: Cargo.toml
crates/cd-ecs/src/: components.rs
crates/cd-ecs/src/components/: flags.rs  mod.rs  state.rs
crates/cd-engine/: Cargo.toml
crates/cd-engine/src/: engine.rs  input.rs  lib.rs  registry.rs
crates/cd-engine/src/systems/: movement.rs
crates/cd-map/: Cargo.toml
crates/cd-map/benches/map_benchmark/: main.rs
crates/cd-map/src/: bitmask.rs  chunk.rs  grid.rs  lib.rs  region.rs  shard.rs  sparse_chunk.rs  tile.rs  world.rs
crates/cd-net/: Cargo.toml
crates/cd-net/src/: lib.rs  protocol.rs  server.rs
