[package]
name = "cd-net"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
cd-core = { workspace = true }
cd-engine = { workspace = true } # Нужен только для InputCmd (enum)
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] } # Web framework + WebSockets
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
futures = "0.3"

[lints]
workspace = true
